k8s/namespaces/development/pr-agent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pr-agent
  namespace: development
  labels:
    app.kubernetes.io/name: pr-agent
    app.kubernetes.io/managed-by: flux
  annotations:
    goldilocks.fairwinds.com/vpa-resource-policy: >
      { "containerPolicies": [
      { "containerName": "pr-agent",
      "minAllowed": { "cpu": "100m", "memory": "4Gi" },
      "maxAllowed": { "cpu": "2000m", "memory": "12Gi" },
      "controlledValues": "RequestsOnly" } ] }
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: pr-agent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pr-agent
        app.kubernetes.io/managed-by: flux
    spec:
      runtimeClassName: youki
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: pr-agent
          # renovate: datasource=docker depName=docker.io/pragent/pr-agent
          image: docker.io/pragent/pr-agent:gitea_app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "8Gi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "2000m"
              memory: "12Gi"
              ephemeral-storage: "5Gi"
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pr-agent-config
