k8s/namespaces/development/pr-agent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pr-agent
  namespace: development
  labels:
    app.kubernetes.io/name: pr-agent
spec:
  selector:
    app.kubernetes.io/name: pr-agent
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: pr-agent
  type: ClusterIP
